# python-project-lvl2

./: .gitignore  Makefile  README.md  linter-check.yml  pyproject.toml
.github/workflows/: ci.yml  linter-check.yml  python-check.yml
gendiff/: __init__.py  cli.py  dicts_builder.py  generate_diff.py  generator.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file3.wrong  result3.txt  result_fil1_file2.py
